Azure Stack ARM Templates/Azure Test RG4-5 ARM templates/TestRG5 Resource Group/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "connections_TestRG5VNGWtoTestRG4VNGW_location": {
            "defaultValue": null,
            "type": "SecureString"
        },
        "connections_TestRG5VNGWtoTestRG4VNGW_location_1": {
            "defaultValue": null,
            "type": "SecureString"
        },
        "virtualNetworks_TestRG5VNet_name": {
            "defaultValue": "TestRG5VNet",
            "type": "String"
        },
        "virtualMachines_TestRG5WinDC_name": {
            "defaultValue": "TestRG5WinDC",
            "type": "String"
        },
        "storageAccounts_testrg5diag135_name": {
            "defaultValue": "testrg5diag135",
            "type": "String"
        },
        "publicIPAddresses_TestRG5VNGWIP_name": {
            "defaultValue": "TestRG5VNGWIP",
            "type": "String"
        },
        "localNetworkGateways_TestRG4LNGW_name": {
            "defaultValue": "TestRG4LNGW",
            "type": "String"
        },
        "networkInterfaces_testrg5windc22_name": {
            "defaultValue": "testrg5windc22",
            "type": "String"
        },
        "networkSecurityGroups_TestRG5NSG_name": {
            "defaultValue": "TestRG5NSG",
            "type": "String"
        },
        "networkInterfaces_testrg5windc799_name": {
            "defaultValue": "testrg5windc799",
            "type": "String"
        },
        "publicIPAddresses_TestRG5WinDC_ip_name": {
            "defaultValue": "TestRG5WinDC-ip",
            "type": "String"
        },
        "virtualNetworkGateways_TestRG5VNGW_name": {
            "defaultValue": "TestRG5VNGW",
            "type": "String"
        },
        "networkInterfaces_testrg5admin_rw40_name": {
            "defaultValue": "testrg5admin-rw40",
            "type": "String"
        },
        "publicIPAddresses_TestRG5WinDCip196_name": {
            "defaultValue": "TestRG5WinDCip196",
            "type": "String"
        },
        "connections_TestRG5VNGWtoTestRG4VNGW_name": {
            "defaultValue": "TestRG5VNGWtoTestRG4VNGW",
            "type": "String"
        },
        "publicIPAddresses_TestRG5ADMIN_RW_ip_name": {
            "defaultValue": "TestRG5ADMIN-RW-ip",
            "type": "String"
        },
        "disks_TestRG5WinDC_OsDisk_1_b5b3c14837d248a7a269ec3f7e50cf2c_name": {
            "defaultValue": "TestRG5WinDC_OsDisk_1_b5b3c14837d248a7a269ec3f7e50cf2c",
            "type": "String"
        },
        "disks_TestRG5ADMIN_RW_OsDisk_1_dac0bd43af62452eb79a13c2a60535d3_name": {
            "defaultValue": "TestRG5ADMIN-RW_OsDisk_1_dac0bd43af62452eb79a13c2a60535d3",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "type": "Microsoft.Compute/disks",
            "apiVersion": "2018-06-01",
            "name": "[parameters('disks_TestRG5ADMIN_RW_OsDisk_1_dac0bd43af62452eb79a13c2a60535d3_name')]",
            "location": "westeurope",
            "sku": {
                "name": "Premium_LRS",
                "tier": "Premium"
            },
            "properties": {
                "osType": "Windows",
                "creationData": {
                    "createOption": "FromImage",
                    "imageReference": {
                        "id": "/Subscriptions/523a0eda-0b3e-41a2-bf22-4a095d972aae/Providers/Microsoft.Compute/Locations/westeurope/Publishers/MicrosoftWindowsServer/ArtifactTypes/VMImage/Offers/WindowsServer/Skus/2016-Datacenter/Versions/2016.127.20190314"
                    }
                },
                "diskSizeGB": 127,
                "diskIOPSReadWrite": 500,
                "diskMBpsReadWrite": 100
            }
        },
        {
            "type": "Microsoft.Compute/disks",
            "apiVersion": "2018-06-01",
            "name": "[parameters('disks_TestRG5WinDC_OsDisk_1_b5b3c14837d248a7a269ec3f7e50cf2c_name')]",
            "location": "westeurope",
            "sku": {
                "name": "Premium_LRS",
                "tier": "Premium"
            },
            "properties": {
                "osType": "Windows",
                "creationData": {
                    "createOption": "FromImage",
                    "imageReference": {
                        "id": "/Subscriptions/523a0eda-0b3e-41a2-bf22-4a095d972aae/Providers/Microsoft.Compute/Locations/westeurope/Publishers/MicrosoftWindowsServer/ArtifactTypes/VMImage/Offers/WindowsServer/Skus/2016-Datacenter/Versions/2016.127.20190314"
                    }
                },
                "diskSizeGB": 127,
                "diskIOPSReadWrite": 500,
                "diskMBpsReadWrite": 100
            }
        },
        {
            "type": "Microsoft.Network/connections",
            "apiVersion": "2019-02-01",
            "name": "[parameters('connections_TestRG5VNGWtoTestRG4VNGW_name')]",
            "location": "westeurope",
            "properties": {
                "resourceGuid": "9ce0f7bd-a706-4a64-8314-988ba8d5d85e",
                "virtualNetworkGateway1": {
                    "location": "[parameters('connections_TestRG5VNGWtoTestRG4VNGW_location')]",
                    "properties": {}
                },
                "localNetworkGateway2": {
                    "location": "[parameters('connections_TestRG5VNGWtoTestRG4VNGW_location_1')]",
                    "properties": {}
                },
                "connectionType": "IPsec",
                "connectionProtocol": "IKEv2",
                "routingWeight": 0,
                "enableBgp": false,
                "usePolicyBasedTrafficSelectors": false,
                "ipsecPolicies": [],
                "expressRouteGatewayBypass": false
            }
        },
        {
            "type": "Microsoft.Network/localNetworkGateways",
            "apiVersion": "2019-02-01",
            "name": "[parameters('localNetworkGateways_TestRG4LNGW_name')]",
            "location": "westeurope",
            "properties": {
                "resourceGuid": "d16b1007-223e-4ce6-90b1-ac026261ca40",
                "localNetworkAddressSpace": {
                    "addressPrefixes": [
                        "10.2.0.0/16"
                    ]
                },
                "gatewayIpAddress": "13.93.24.93"
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2019-02-01",
            "name": "[parameters('networkSecurityGroups_TestRG5NSG_name')]",
            "location": "westeurope",
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "ab87afb4-2f6c-4a1b-b37c-6893923d0152",
                "securityRules": [
                    {
                        "name": "port443",
                        "etag": "W/\"07f73310-0d33-4f0c-922d-f5a8e8958790\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "pcoip4172",
                        "etag": "W/\"07f73310-0d33-4f0c-922d-f5a8e8958790\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "4172",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "pcoip80",
                        "etag": "W/\"07f73310-0d33-4f0c-922d-f5a8e8958790\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "pcoip60443",
                        "etag": "W/\"07f73310-0d33-4f0c-922d-f5a8e8958790\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "60443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 130,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "rdp",
                        "etag": "W/\"07f73310-0d33-4f0c-922d-f5a8e8958790\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 140,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "default-allow-ssh",
                        "etag": "W/\"07f73310-0d33-4f0c-922d-f5a8e8958790\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "etag": "W/\"07f73310-0d33-4f0c-922d-f5a8e8958790\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "etag": "W/\"07f73310-0d33-4f0c-922d-f5a8e8958790\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "etag": "W/\"07f73310-0d33-4f0c-922d-f5a8e8958790\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "etag": "W/\"07f73310-0d33-4f0c-922d-f5a8e8958790\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "etag": "W/\"07f73310-0d33-4f0c-922d-f5a8e8958790\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "etag": "W/\"07f73310-0d33-4f0c-922d-f5a8e8958790\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2019-02-01",
            "name": "[parameters('publicIPAddresses_TestRG5ADMIN_RW_ip_name')]",
            "location": "westeurope",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "749ab5ca-a31d-443d-b8d1-a8ffbe4e9ae1",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "ipTags": []
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2019-02-01",
            "name": "[parameters('publicIPAddresses_TestRG5VNGWIP_name')]",
            "location": "westeurope",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "bf37e218-6e77-43b8-8666-9e7d42570a49",
                "ipAddress": "40.68.75.74",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "ipTags": []
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2019-02-01",
            "name": "[parameters('publicIPAddresses_TestRG5WinDC_ip_name')]",
            "location": "westeurope",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "5aa5d79d-59aa-4914-be85-26adc66ced92",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "ipTags": []
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2019-02-01",
            "name": "[parameters('publicIPAddresses_TestRG5WinDCip196_name')]",
            "location": "westeurope",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "f9a5afeb-bf6c-4efe-87a9-16c626698d81",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "ipTags": []
            }
        },
        {
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "2019-04-01",
            "name": "[parameters('storageAccounts_testrg5diag135_name')]",
            "location": "westeurope",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "Storage",
            "properties": {
                "networkAcls": {
                    "bypass": "AzureServices",
                    "virtualNetworkRules": [],
                    "ipRules": [],
                    "defaultAction": "Allow"
                },
                "supportsHttpsTrafficOnly": false,
                "encryption": {
                    "services": {
                        "file": {
                            "enabled": true
                        },
                        "blob": {
                            "enabled": true
                        }
                    },
                    "keySource": "Microsoft.Storage"
                }
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2019-02-01",
            "name": "[concat(parameters('networkSecurityGroups_TestRG5NSG_name'), '/default-allow-ssh')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_TestRG5NSG_name'))]"
            ],
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2019-02-01",
            "name": "[concat(parameters('networkSecurityGroups_TestRG5NSG_name'), '/pcoip4172')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_TestRG5NSG_name'))]"
            ],
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "4172",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 110,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2019-02-01",
            "name": "[concat(parameters('networkSecurityGroups_TestRG5NSG_name'), '/pcoip60443')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_TestRG5NSG_name'))]"
            ],
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "60443",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 130,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2019-02-01",
            "name": "[concat(parameters('networkSecurityGroups_TestRG5NSG_name'), '/pcoip80')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_TestRG5NSG_name'))]"
            ],
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 120,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2019-02-01",
            "name": "[concat(parameters('networkSecurityGroups_TestRG5NSG_name'), '/port443')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_TestRG5NSG_name'))]"
            ],
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "443",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2019-02-01",
            "name": "[concat(parameters('networkSecurityGroups_TestRG5NSG_name'), '/rdp')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_TestRG5NSG_name'))]"
            ],
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 140,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2019-02-01",
            "name": "[parameters('virtualNetworks_TestRG5VNet_name')]",
            "location": "westeurope",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_TestRG5NSG_name'))]"
            ],
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "41192e8f-3a96-40ee-a967-457a6b10ad24",
                "addressSpace": {
                    "addressPrefixes": [
                        "10.6.0.0/16"
                    ]
                },
                "dhcpOptions": {
                    "dnsServers": [
                        "10.5.0.4"
                    ]
                },
                "subnets": [
                    {
                        "name": "subnet-connector",
                        "etag": "W/\"e772cc15-ae8c-4184-92e2-264de7cfd8c5\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "addressPrefix": "10.6.0.128/26",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_TestRG5NSG_name'))]"
                            },
                            "serviceEndpoints": [],
                            "delegations": []
                        }
                    },
                    {
                        "name": "subnet-workstations",
                        "etag": "W/\"e772cc15-ae8c-4184-92e2-264de7cfd8c5\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "addressPrefix": "10.6.240.0/20",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_TestRG5NSG_name'))]"
                            },
                            "serviceEndpoints": [],
                            "delegations": []
                        }
                    },
                    {
                        "name": "GatewaySubnet",
                        "etag": "W/\"e772cc15-ae8c-4184-92e2-264de7cfd8c5\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "addressPrefix": "10.6.0.64/26",
                            "serviceEndpoints": [],
                            "delegations": []
                        }
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false,
                "enableVmProtection": false
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2019-02-01",
            "name": "[concat(parameters('virtualNetworks_TestRG5VNet_name'), '/GatewaySubnet')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_TestRG5VNet_name'))]"
            ],
            "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.6.0.64/26",
                "serviceEndpoints": [],
                "delegations": []
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2018-10-01",
            "name": "[parameters('virtualMachines_TestRG5WinDC_name')]",
            "location": "westeurope",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_testrg5windc22_name'))]",
                "[resourceId('Microsoft.Storage/StorageAccounts', parameters('storageAccounts_testrg5diag135_name'))]"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_DS1_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2016-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Windows",
                        "name": "[concat(parameters('virtualMachines_TestRG5WinDC_name'), '_OsDisk_1_e901310fb2c643609a8ba2765fe1cb31')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "id": "[resourceId('Microsoft.Compute/disks', concat(parameters('virtualMachines_TestRG5WinDC_name'), '_OsDisk_1_e901310fb2c643609a8ba2765fe1cb31'))]"
                        }
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_TestRG5WinDC_name')]",
                    "adminUsername": "primesoftadmin",
                    "windowsConfiguration": {
                        "provisionVMAgent": true,
                        "enableAutomaticUpdates": true
                    },
                    "secrets": [],
                    "allowExtensionOperations": true
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_testrg5windc22_name'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[concat('https://', parameters('storageAccounts_testrg5diag135_name'), '.blob.core.windows.net/')]"
                    }
                }
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2019-02-01",
            "name": "[parameters('networkInterfaces_testrg5admin_rw40_name')]",
            "location": "westeurope",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_TestRG5ADMIN_RW_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_TestRG5VNet_name'), 'subnet-workstations')]"
            ],
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "5d6be438-e671-4043-8492-1371e8e8eaee",
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "etag": "W/\"42acf14a-4c9b-4305-ab9e-e8d9c7f605aa\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.6.240.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_TestRG5ADMIN_RW_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_TestRG5VNet_name'), 'subnet-workstations')]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": []
                },
                "macAddress": "00-0D-3A-20-B2-FE",
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "tapConfigurations": []
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2019-02-01",
            "name": "[parameters('networkInterfaces_testrg5windc22_name')]",
            "location": "westeurope",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_TestRG5WinDCip196_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_TestRG5VNet_name'), 'subnet-connector')]"
            ],
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "fb235a4a-9136-42d8-bb93-326cb5e8700f",
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "etag": "W/\"295a99c2-7dcc-4137-a785-d62dd96a4af2\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.6.0.133",
                            "privateIPAllocationMethod": "Static",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_TestRG5WinDCip196_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_TestRG5VNet_name'), 'subnet-connector')]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": []
                },
                "macAddress": "00-0D-3A-39-5B-A3",
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "primary": true,
                "tapConfigurations": []
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2019-02-01",
            "name": "[parameters('networkInterfaces_testrg5windc799_name')]",
            "location": "westeurope",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_TestRG5WinDC_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_TestRG5VNet_name'), 'subnet-connector')]"
            ],
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "e12b2cdf-0cf4-4474-a441-4df293037db8",
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "etag": "W/\"04fbf42a-dca4-40e1-a43c-c48230d11306\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.6.0.132",
                            "privateIPAllocationMethod": "Static",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_TestRG5WinDC_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_TestRG5VNet_name'), 'subnet-connector')]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": []
                },
                "macAddress": "00-0D-3A-39-16-45",
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "tapConfigurations": []
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworkGateways",
            "apiVersion": "2019-02-01",
            "name": "[parameters('virtualNetworkGateways_TestRG5VNGW_name')]",
            "location": "westeurope",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_TestRG5VNGWIP_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_TestRG5VNet_name'), 'GatewaySubnet')]"
            ],
            "properties": {
                "resourceGuid": "f127c940-de55-4608-9835-87c1dcb43e8c",
                "ipConfigurations": [
                    {
                        "name": "default",
                        "etag": "W/\"2cb6effb-772a-4c41-96cc-d5f6c51d04ee\"",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_TestRG5VNGWIP_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_TestRG5VNet_name'), 'GatewaySubnet')]"
                            }
                        }
                    }
                ],
                "sku": {
                    "name": "VpnGw1",
                    "tier": "VpnGw1",
                    "capacity": 2
                },
                "gatewayType": "Vpn",
                "vpnType": "RouteBased",
                "enableBgp": false,
                "activeActive": false,
                "vpnClientConfiguration": {
                    "vpnClientProtocols": [
                        "SSTP",
                        "IkeV2"
                    ],
                    "vpnClientRootCertificates": [],
                    "vpnClientRevokedCertificates": [],
                    "vpnClientIpsecPolicies": []
                },
                "bgpSettings": {
                    "asn": 65515,
                    "bgpPeeringAddress": "10.6.0.126",
                    "peerWeight": 0
                }
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2019-02-01",
            "name": "[concat(parameters('virtualNetworks_TestRG5VNet_name'), '/subnet-connector')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_TestRG5VNet_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_TestRG5NSG_name'))]"
            ],
            "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.6.0.128/26",
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_TestRG5NSG_name'))]"
                },
                "serviceEndpoints": [],
                "delegations": []
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2019-02-01",
            "name": "[concat(parameters('virtualNetworks_TestRG5VNet_name'), '/subnet-workstations')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_TestRG5VNet_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_TestRG5NSG_name'))]"
            ],
            "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.6.240.0/20",
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_TestRG5NSG_name'))]"
                },
                "serviceEndpoints": [],
                "delegations": []
            }
        }
    ]
}
